tests/ui/mismatched_types/non_zero_assigned_lit.stderr
error[E0308]: mismatched types
  --> $DIR/non_zero_assigned_lit.rs:4:36
   |
LL |     let x: std::num::NonZero<i8> = -128;
   |            ---------------------   ^^^^ expected `NonZero<i8>`, found integer
   |            |
   |            expected due to this
   |
   = note: expected struct `NonZero<i8>`
                found type `{integer}`
help: consider calling `NonZero::new`
   |
LL |     let x: std::num::NonZero<i8> = NonZero::new(-128).unwrap();
   |                                    +++++++++++++    ++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
